--- a/AirCanvas/res/values/strings.xml
+++ b/AirCanvas/res/values/strings.xml
@@ -3,6 +3,6 @@
 
     <string name="app_name">AirCanvas</string>
     <string name="action_settings">Settings</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="button_send">Submit</string>
 
 </resources>
